apps/production/media/moonlight-web/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: moonlight-web
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`moonlight.local.${DOMAIN}`)
      kind: Rule
      services:
        - name: moonlight-web-service
          port: 8087
  tls:
    certResolver: letsencrypt
